--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a react template for cli",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve",
+    "start": "cross-env NODE_ENV=development webpack serve --port 8088",
     "build": "cross-env NODE_ENV=production webpack",
     "build:smp": "cross-env NODE_ENV=production measure=true webpack"
   },
@@ -22,12 +22,18 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "dotenv-expand": "^8.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@swc/core": "^1.2.154",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "^8.11.0",
@@ -38,10 +44,12 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "postcss-loader": "^6.2.1",
+    "react-refresh": "^0.14.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
     "swc-loader": "^0.1.15",
     "terser-webpack-plugin": "^5.3.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
