--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-webpack-plugin": "^3.1.1",
@@ -45,6 +46,7 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "postcss-loader": "^6.2.1",
+    "prettier": "^2.7.1",
     "react-refresh": "^0.14.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
